# multi-scale

./: .env.example  .gitignore  .vercelignore  CATALOG_INGESTION_FLOW.md  Dockerfile  ENV_CONFIGURATION.md  ENV_TEMPLATE.txt  README.md  failed_ingestions.csv  ingest.py  pyproject.toml  requirements.txt  start_server.bat  start_server.sh
app/: main.py
app/api/v1/: routes.py
app/api/v1/endpoints/: catalog.py  detection.py  health.py  images.py  search.py
app/core/: config.py  errors.py  lifespan.py  logging.py
app/dependencies/: container.py
app/models/: domain.py  schemas.py
app/repositories/: pinecone_repo.py
app/services/: attributes.py  detection.py  detection_rfdetr.py  embedding.py  embedding_multiscale.py  image_io.py  preprocessing.py  rerank.py  rerank_advanced.py  search_service.py  segmentation.py  segmentation_polygon.py  visual_matcher.py
app/tests/: test_health.py
app/utils/: hashing.py  timing.py
frontend/: next.config.mjs  vercel.json
frontend/app/results/: page.tsx
frontend/components/: SearchInterface.tsx
